# ChangeLog for genkernel
# Copyright 2006-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh:
  Added debug level to LUKS print_info messages for bug #156410.

  03 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  x86/modules_load, x86_64/modules_load:
  Added raid456 to alpha/amd64/x86 MODULES_EVMS2 and added tg3 to MODULES_NET.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Inverted check on CDROOT_DEV, as it should be -z not -n. Thanks to Jakub Moc
  <jakub@gentoo.org> for coming up with the quick fix in bug #153554. I lied
  before. This one is really 3.4.5.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc,
  genkernel:
  Added typo fix from Jason Pepas <j.pepas@mail.utexas.edu> in bug #153516.
  This is 3.4.5.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> alpha/busy-config,
  ia64/busy-config, mips/busy-config, parisc/busy-config,
  parisc64/busy-config, ppc/busy-config, ppc64/busy-config,
  sparc/busy-config, sparc64/busy-config, um/busy-config, x86/busy-config,
  x86_64/busy-config, xen0/busy-config, xenU/busy-config:
  Added Large File Support thanks to Fabio Erculiani <lxnay@lxnaydesign.net>
  in bug #152881.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> genkernel:
  Added patch to improve symlink support by Michael Hordijk
  <hoffbrinkle@hotmail.com> for bug #143217.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc:
  Added patch from Tim Steiner <tsteiner@nerdclub.net> to add a real_rootflags
  parameter for bug #122672.

  13 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc:
  Added patch to support resuming from encrypted swap. The patch was submitted
  to bug #152441.

  25 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> genkernel:
  This is the 3.4.4 release.
