@@ -117,12 +117,12 @@ create_base_initrd_sys() {
 #		/bin/tar -jxpf "${UDEV_BINCACHE}" -C "${TEMP}/initrd-temp" || gen_die 'Could not extract udev binary cache!'
 #		if [ ! -e "${TEMP}/initrd-temp/bin/udevstart" ]
 #		then
-#		    ln -sf "./udev" "${TEMP}/initrd-temp/bin/udevstart" || 	gen_die 'Could not symlink udev -> udevstart!'
+#		    ln -sf "./udev" "${TEMP}/initrd-temp/bin/udevstart" || gen_die 'Could not symlink udev -> udevstart!'
 #		fi
 		
 #		if [ ! -e "${TEMP}/initrd-temp/bin/udevsend" ]
 #		then
-#		    ln -sf "./udev" "${TEMP}/initrd-temp/bin/udevsend" || 	gen_die 'Could not symlink udev -> udevsend!'
+#		    ln -sf "./udev" "${TEMP}/initrd-temp/bin/udevsend" || gen_die 'Could not symlink udev -> udevsend!'
 #		fi
 #	fi
 	
@@ -144,6 +144,17 @@ create_base_initrd_sys() {
 			gen_die "Could not extract unionfs tools binary cache!";
 	fi
 
+	# Suspend
+	if [ "${SUSPEND}" = '1' ]
+	then
+		print_info 1 'SUSPEND: Adding support (compiling binaries)...'
+		compile_suspend
+		/bin/tar -jxpf "${SUSPEND_BINCACHE}" -C "${TEMP}/initrd-temp" ||
+			gen_die "Could not extract suspend binary cache!"
+		mkdir -p "${TEMP}/initrd-temp/etc"
+		cp -f /etc/suspend.conf "${TEMP}/initrd-temp/etc" ||
+			gen_die 'Could not copy /etc/suspend.conf'
+	fi
 
 	# DMRAID 
 	if [ "${DMRAID}" = '1' ]
