@@ -743,6 +743,18 @@ setup_unionfs() {
 	fi
 }
 
+suspend_resume() {
+	[ -x /sbin/resume ] || return 0
+	/sbin/resume
+	local ret=$?
+
+	if [ "${ret}" -eq 0 ]; then
+		exit 0
+	fi
+
+	return 0
+}
+
 suspend2_resume() {
 	if [ -d /proc/suspend2 ] || [ -d /sys/power/suspend2 ]; then
 		local splash_theme
